# OpenGLvjezbe

./: CMakeLists.txt
nastava/: CMakeLists.txt
nastava/v02/: CMakeLists.txt  EBO.cpp  EBO.h  VAO.h  VBO.cpp  VBO.h  default.frag  default.vert  pathconfig.h.in  shaderClass.cpp  shaderClass.h  v02.cpp  v02_f.glsl  v02_v.glsl
nastava/v02_000/: CMakeLists.txt  pathconfig.h.in  shader.cpp  shader.h  v02_000.cpp
